<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reader_note_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/reader_note_popup_base"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/note_popup_edit_text"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@android:color/transparent"
            android:gravity="top|start"
            android:hint="@string/write_your_note"
            android:inputType="textMultiLine"
            android:overScrollMode="always" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/note_popup_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/note_popup_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>


